Category(DTO, Repository, Service, ServiceImpl), ServiceProduct(Controller, DTO, Repository, Service, ServiceImpl) 추가 SecurityConfig, JWTFilter 에서 /api/serviceProduct 경로 추가 ServiceProduct imgUrl 삭제 -> SPImage List로 받음 ServiceProductController Post("/")에서 사용하는 검증 함수 추가